--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@builder.io/partytown": "^0.7.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.6",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
@@ -24,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-read-more-read-less": "^1.0.7",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-scroll": "^1.8.9",
