--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.6",
+    "@netlify/plugin-nextjs": "^4.30.2",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
