--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "partytown": "partytown copylib public/~partytown",
-    "build": "npm run partytown && next build && next export",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
